<resources>
    <string name="app_name">SMS Client Spam Detector</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string name="pref_header_notifications">Notifications</string>
    <string name="channel_name">Name</string>
    <string name="channel_description">Description</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--Menu show in the list fragment-->
    <string name="fragment_list_menu_try_spam_sms_string">Get spam SMS</string>
    <string name="fragment_list_menu_information_app">Information</string>

    <!--Menu show in the spam sms list fragment-->
    <string name="fragment_list_menu_delete_spam_sms_string">Delete all my Spam SMS</string>

    <!--Menu show in the spam sms detail when the sms has an url fragment-->
    <string name="fragment_sms_detail_check_url_phishing_site_string">Check URL</string>

    <!-- Main Activity -->
    <string name="title_activity_sms">SMS List</string>
    <string name="alert_dialog_not_permission_title_string">Error</string>
    <string name="alert_dialog_not_permission_botton_string">OK</string>
    <string name="alert_dialog_not_permission_body_string">The application needs access to your SMS.</string>


    <!--Spam SMS List Fragment-->
    <string name="fragment_spam_sms_text_view_spam_sms_loading">Classifying all your SMS.</string>
    <string name="fragment_spam_sms_text_view_spam_sms_indicator_string">You have # spam SMS.</string>
    <string name="fragment_spam_sms_text_view_spam_sms_indicator_no_spam_string">You don\'t have any spam sms.</string>


    <!--String in List-->
    <string name="text_view_spam_indicator_string">S</string>
    <string name="text_view_phishing_indicator_string">P</string>

    <!--String in sms detail-->
    <string name="activity_sms_detail_title">SMS Content</string>
    <string name="fragment_sms_indicator_spam_phishing">SMS is SPAM</string>
    <string name="fragment_sms_indicator_spam">Spam</string>
    <string name="fragment_sms_indicator_phishing">contains a phishing URL</string>
    <string name="title_activity_spam_sms">SMS Spam List</string>
    <string name="fragment_sms_check_url_for_phishing_is_in_process">Work in process.</string>
    <string name="fragment_sms_check_url_error">Error checking the URL.</string>
    <string name="fragment_sms_check_url_for_phishing_start">Starting to check if URL is a phishing site.</string>
    <string name="fragment_sms_check_url_for_phishing_url_phishing">Warning: URL could be a phishing site.</string>
    <string name="fragment_sms_check_url_for_phishing_url_not_phishing">Low chances URL is not a phishing site.</string>

    <!--String menu navigation drawer main activity-->
    <string name="navigation_drawer_activity_main_app_info">Information</string>
    <string name="title_activity_test_url">TestUrlActivity</string>


    <!--String to test URL in test url fragment-->
    <string name="edit_text_fragment_test_url_url_string">URL</string>
    <string name="button_fragment_test_url_test_string">Test URL</string>

    <!--Warning Notifications-->
    <string name="notification_message_warning_title">Warning</string>
    <string name="notification_message_warning_spam_message">You just receive a possible Spam SMS</string>
    <string name="notification_message_warning_spam_phishing_message">You just receive a possible Spam SMS
        that could contain a URL linked to a Phishing Site</string>


    <!--App Info Activity-->
    <string name="title_activity_info_app">Information</string>

    <!--App Info Fragment-->
    <string name="fragment_app_info_info_app">Spam SMS Detector V0.2 was developed by Fernando Rafael Berra Kossik.
        \n\nUsing machine learning, the application detects if a SMS is spam or not and also if an URL is linked
        to a phishing site. The application uses the Tensorflow library for the machine learning.
        It also uses two models that were preconfigured for the app, the datasets used to create
        the models were obtained from the \"UCI Machine Learning Repository\". The Spam SMS dataset
        was created by Tiago A. Almeida, José María Gómez Hidalgo, Tiago P. Silva; the
        Phsihing Website dataset was created by Rami M. Mohammad, Fadi Thabtah, Lee McCluskey.
        \n\nThe Spam SMS Detector logo was created by Fernando Enrique Berra Kossik.</string>
    <string name="fragment_app_info_info_app_pdf_intro">A complete detail of the application can be found at:</string>
    <string name="fragment_app_info_info_app_pdf_link">http://web.uvic.ca/~frbk1992/project/csc578report.pdf</string>
    <string name="fragment_app_info_apache_libs_title">Open sources licenses</string>
    <string name="fragment_app_info_apache_libs">Tensorflow, RxJava, RxAndroid, RxKotlin, RxBinding,
        RxPermissions, Apache Commons Net, Apache Commons Lang, OkHttp</string>
</resources>
