<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorEscalaGrisesGrisFondo">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_app_info_info_app"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_info_app"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_app_info_info_app_pdf_intro"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_info_app_pdf_intro"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_app_info_info_app_pdf_link"
            android:autoLink="web"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_info_app_pdf_link"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_app_info_apache_libs_title"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_libs_app_title"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_app_info_apache_libs"
            android:textStyle="bold"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_libs_app"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/fragment_app_info_text_view_apache_license"/>


    </LinearLayout>


</ScrollView>
